--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
       <nav class="menu">
         <ul>
-          <li><a href="/#features">Key Features</a></li>
-          <li><a href="/#benefits">Benefits</a></li>
-          <li><a href="/#screenshots">Screenshots</a></li>
-          <li><a href="/#getting">Getting Trace Compass</a></li>
-          <li><a href="/#docs">Documentation</a></li>
-          <li><a href="/#community">Community</a></li>
+          <li><a href="#features">Key Features</a></li>
+          <li><a href="#benefits">Benefits</a></li>
+          <li><a href="#screenshots">Screenshots</a></li>
+          <li><a href="#getting">Getting Trace Compass</a></li>
+          <li><a href="#docs">Documentation</a></li>
+          <li><a href="#community">Community</a></li>
         </ul>
       </nav>
 
@@ -310,7 +310,7 @@
 
 
 <p>
-  <a href="/download.html">More downloads...</a>
+  <a href="download.html">More downloads...</a>
 </p>
 
 
