webContent: Fix footer links
Change-Id: I6da1b9512c8633224e747ae3ab14d42b69d942c0
Signed-off-by: Jean-Christian Kouame <jean-christian.kouame@ericsson.com>

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Featured Works</h2>
+					<h2 class="title">Screenshots</h2>
 				</div>
 				<!-- /Section header -->
 
@@ -368,8 +368,7 @@
 							entries and exits, you can display the call stack of your
 							application over time.</h3>
 						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a> <a
-								class="lightbox" href="img/shots/callstack.png"><i
+							<a class="lightbox" href="img/shots/callstack.png"><i
 								class="fa fa-search"></i></a>
 						</div>
 					</div>
@@ -385,8 +384,7 @@
 						<h3>Displays the states of processes and resources over time,
 							using information from Linux kernel traces.</h3>
 						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a> <a
-								class="lightbox" href="img/shots/kernel.png"><i
+							<a class="lightbox" href="img/shots/kernel.png"><i
 								class="fa fa-search"></i></a>
 						</div>
 					</div>
@@ -402,8 +400,7 @@
 						<h3>Using LTTng-UST's C standard library wrapper, all calls
 							to</h3>
 						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a> <a
-								class="lightbox" href="img/shots/memory.png"><i
+							<a class="lightbox" href="img/shots/memory.png"><i
 								class="fa fa-search"></i></a>
 						</div>
 					</div>
@@ -420,8 +417,7 @@
 							trace types. Support for libpcap traces (the format used by
 							Wireshark) was added this way.</h3>
 						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a> <a
-								class="lightbox" href="img/shots/pcap.png"><i
+							<a class="lightbox" href="img/shots/pcap.png"><i
 								class="fa fa-search"></i></a>
 						</div>
 					</div>
@@ -546,7 +542,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Docs</h2>
+					<h2 class="title">Documentation</h2>
 				</div>
 
 
@@ -679,119 +675,55 @@
 		<!-- Container -->
 		<div class="container">
 
-			<!-- Row -->
 			<div class="row">
 
-				<div class="col-md-3">
-
-					<h3 class="footer-follow left" style="color: white;">Eclipse
-						Foundation</h3>
+				<div class="col-md-6" style="text-align: center;">
+					<h3 style="color: white;">Eclipse Foundation</h3>
 					<ul style="list-style-type: none">
-						<li class="link_about first"><a href="//www.eclipse.org/">Foundation</a></li>
-						<li class="link_about first"><a href="//www.eclipse.org/org/">About
+						<li><a href="//www.eclipse.org/">Foundation</a></li>
+						<li><a href="//www.eclipse.org/org/">About Us</a></li>
+						<li><a href="//www.eclipse.org/org/foundation/contact.php">Contact
 								Us</a></li>
-						<li class="link_contact"><a
-							href="//www.eclipse.org/org/foundation/contact.php">Contact
-								Us</a></li>
-						<li class="link_donate"><a href="//www.eclipse.org/donate">Donate</a></li>
-						<li class="link_gouvernance"><a
-							href="//www.eclipse.org/org/documents/">Governance</a></li>
-						<li class="link_logo"><a href="//www.eclipse.org/artwork/">Logo
-								and Artwork</a></li>
-						<li class="link_board last"><a
-							href="//www.eclipse.org/org/foundation/directors.php">Board
-								of Directors</a></li>
+						<li><a href="//www.eclipse.org/donate">Donate</a></li>
+						<li><a href="//www.eclipse.org/org/documents/">Governance</a></li>
 					</ul>
 
 				</div>
 
-				<div class="col-md-3">
-					<h3 class="footer-follow" style="color: white;">Legal</h3>
-					<ul class="nav">
-						<li class="link_privacy first"><a
-							href="//www.eclipse.org/legal/privacy.php">Privacy Policy</a></li>
-						<li class="link_terms"><a
-							href="//www.eclipse.org/legal/termsofuse.php">Terms of Use</a></li>
-						<li class="link_copyright"><a
-							href="//www.eclipse.org/legal/copyright.php">Copyright Agent</a></li>
-						<li class="link_epl"><a
-							href="//www.eclipse.org/legal/epl-2.0/">Eclipse Public
-								License</a></li>
-						<li class="link_legal last"><a
-							href="//www.eclipse.org/legal/">Legal Resources</a></li>
+				<div class="col-md-6" style="text-align: center;">
+					<h3 style="color: white;">Legal</h3>
+					<ul style="list-style-type: none;">
+						<li><a href="//www.eclipse.org/legal/privacy.php">Privacy
+								Policy</a></li>
+						<li><a href="//www.eclipse.org/legal/termsofuse.php">Terms
+								of Use</a></li>
+						<li><a href="//www.eclipse.org/legal/copyright.php">Copyright
+								Agent</a></li>
+						<li><a href="//www.eclipse.org/legal/">Legal Resources</a></li>
+						<li><a href="//www.eclipse.org/artwork/">Logo and Artwork</a></li>
 					</ul>
-				</div>
-
-				<div class="col-md-3">
-					<h3 class="footer-follow left" style="color: white;">Useful
-						Links</h3>
-					<ul class="nav">
-						<li class="link_bugs first"><a
-							href="//bugs.eclipse.org/bugs/">Report a Bug</a></li>
-						<li class="link_help"><a href="//help.eclipse.org/">Documentation</a></li>
-						<li class="link_contribute"><a
-							href="//www.eclipse.org/contribute/">How to Contribute</a></li>
-						<li class="link_mail"><a href="//www.eclipse.org/mail/">Mailing
-								Lists</a></li>
-						<li class="link_forums"><a href="//www.eclipse.org/forums/">Forums</a></li>
-						<li class="link_marketplace last"><a
-							href="//marketplace.eclipse.org">Marketplace</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-3">
-					<h3 class="footer-follow left" style="color: white;">Other</h3>
-					<ul class="nav">
-						<li class="link_ide first"><a href="//www.eclipse.org/ide/">IDE
-								and Tools</a></li>
-						<li class="link_projects"><a
-							href="//www.eclipse.org/projects">Community of Projects</a></li>
-						<li class="link_workinggroups"><a
-							href="//www.eclipse.org/org/workinggroups/">Working Groups</a></li>
-						<li class="link_research@eclipse"><a
-							href="//www.eclipse.org/org/research/">Research@Eclipse</a></li>
-						<li class="link_eclipse_status last"><a
-							href="https://status.eclipse.org">Service Status</a></li>
-					</ul>
-					<h3 class="section-title sr-only">Other</h3>
-					<ul class="list-inline social-media">
-						<li class="link_twitter first"><a
-							href="https://twitter.com/EclipseFdn"><i
-								class="fa fa-twitter-square"></i></a></li>
-						<li class="link_google"><a
-							href="https://plus.google.com/+Eclipse"><i
-								class="fa fa-google-plus-square"></i></a></li>
-						<li class="link_facebook"><a
-							href="https://www.facebook.com/eclipse.org"><i
-								class="fa fa-facebook-square"></i></a></li>
-						<li class="link_youtube"><a
-							href="https://www.youtube.com/user/EclipseFdn"><i
-								class="fa fa-youtube-square"></i></a></li>
-						<li class="link_linkedin last"><a
-							href="https://www.linkedin.com/company/eclipse-foundation"><i
-								class="fa fa-linkedin-square"></i></a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-12">
-					<!-- footer copyright -->
-					<div class="footer-copyright">
-						<div>
-							<span class="hidden-print"><a
-								href="https://www.eclipse.org/"><img
-									src="http://projects.eclipse.org/sites/all/themes/solstice/public/images/logo/eclipse-logo-bw-800x188.png"
-									alt="Eclipse.org black and white logo" width="166" height="39"
-									class="logo-eclipse-white"></a></span>
-							<p id="copyright-text">Copyright © 2017. All Rights Reserved. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
-						</div>
-					</div>
-					<!-- /footer copyright -->
-
 				</div>
 
 			</div>
-			<!-- /Row -->
 
+			<div class="col-md-12">
+				<!-- footer copyright -->
+				<div class="footer-copyright">
+					<div>
+						<span class="hidden-print"><a
+							href="https://www.eclipse.org/"><img
+								src="http://projects.eclipse.org/sites/all/themes/solstice/public/images/logo/eclipse-logo-bw-800x188.png"
+								alt="Eclipse.org black and white logo" width="166" height="39"
+								class="logo-eclipse-white"></a></span>
+						<p id="copyright-text">
+							Copyright © 2017. All Rights Reserved. Designed by <a
+								href="https://colorlib.com" target="_blank">Colorlib</a>
+						</p>
+					</div>
+				</div>
+				<!-- /footer copyright -->
+
+			</div>
 		</div>
 		<!-- /Container -->
 
