--- a/download.html
+++ b/download.html
@@ -255,82 +255,82 @@
 		<!-- Container -->
 		<div class="container">
 
-			<!-- Row -->
 			<div class="row">
 
-				<div class="col-md-3">
-
-					<h3 class="footer-follow left" style="color: white;">Eclipse
-						Foundation</h3>
+				<div class="col-md-6" style="text-align: center;">
+					<h3 style="color: white;">Eclipse Foundation</h3>
 					<ul style="list-style-type: none">
-						<li class="link_about first"><a href="//www.eclipse.org/">Foundation</a></li>
-						<li class="link_about first"><a href="//www.eclipse.org/org/">About
+						<li><a href="//www.eclipse.org/">Foundation</a></li>
+						<li><a href="//www.eclipse.org/org/">About Us</a></li>
+						<li><a href="//www.eclipse.org/org/foundation/contact.php">Contact
 								Us</a></li>
-						<li class="link_contact"><a
-							href="//www.eclipse.org/org/foundation/contact.php">Contact
-								Us</a></li>
-						<li class="link_donate"><a href="//www.eclipse.org/donate">Donate</a></li>
-						<li class="link_gouvernance"><a
-							href="//www.eclipse.org/org/documents/">Governance</a></li>
-						<li class="link_logo"><a href="//www.eclipse.org/artwork/">Logo
-								and Artwork</a></li>
-						<li class="link_board last"><a
-							href="//www.eclipse.org/org/foundation/directors.php">Board
-								of Directors</a></li>
+						<li><a href="//www.eclipse.org/donate">Donate</a></li>
+						<li><a href="//www.eclipse.org/org/documents/">Governance</a></li>
 					</ul>
 
 				</div>
 
-				<div class="col-md-3">
-					<h3 class="footer-follow" style="color: white;">Legal</h3>
-					<ul class="nav">
-						<li class="link_privacy first"><a
-							href="//www.eclipse.org/legal/privacy.php">Privacy Policy</a></li>
-						<li class="link_terms"><a
-							href="//www.eclipse.org/legal/termsofuse.php">Terms of Use</a></li>
-						<li class="link_copyright"><a
-							href="//www.eclipse.org/legal/copyright.php">Copyright Agent</a></li>
-						<li class="link_epl"><a
-							href="//www.eclipse.org/legal/epl-2.0/">Eclipse Public
-								License</a></li>
-						<li class="link_legal last"><a
-							href="//www.eclipse.org/legal/">Legal Resources</a></li>
+				<div class="col-md-6" style="text-align: center;">
+					<h3 style="color: white;">Legal</h3>
+					<ul style="list-style-type: none;">
+						<li><a href="//www.eclipse.org/legal/privacy.php">Privacy
+								Policy</a></li>
+						<li><a href="//www.eclipse.org/legal/termsofuse.php">Terms
+								of Use</a></li>
+						<li><a href="//www.eclipse.org/legal/copyright.php">Copyright
+								Agent</a></li>
+						<li><a href="//www.eclipse.org/legal/">Legal Resources</a></li>
+						<li><a href="//www.eclipse.org/artwork/">Logo and Artwork</a></li>
 					</ul>
 				</div>
 
-				<div class="col-md-3">
-					<h3 class="footer-follow left" style="color: white;">Useful
-						Links</h3>
-					<ul class="nav">
-						<li class="link_bugs first"><a
-							href="//bugs.eclipse.org/bugs/">Report a Bug</a></li>
-						<li class="link_help"><a href="//help.eclipse.org/">Documentation</a></li>
-						<li class="link_contribute"><a
-							href="//www.eclipse.org/contribute/">How to Contribute</a></li>
-						<li class="link_mail"><a href="//www.eclipse.org/mail/">Mailing
-								Lists</a></li>
-						<li class="link_forums"><a href="//www.eclipse.org/forums/">Forums</a></li>
-						<li class="link_marketplace last"><a
-							href="//marketplace.eclipse.org">Marketplace</a></li>
-					</ul>
-				</div>
+			</div>
 
-				<div class="col-md-3">
-					<h3 class="footer-follow left" style="color: white;">Other</h3>
-					<ul class="nav">
-						<li class="link_ide first"><a href="//www.eclipse.org/ide/">IDE
-								and Tools</a></li>
-						<li class="link_projects"><a
-							href="//www.eclipse.org/projects">Community of Projects</a></li>
-						<li class="link_workinggroups"><a
-							href="//www.eclipse.org/org/workinggroups/">Working Groups</a></li>
-						<li class="link_research@eclipse"><a
-							href="//www.eclipse.org/org/research/">Research@Eclipse</a></li>
-						<li class="link_eclipse_status last"><a
-							href="https://status.eclipse.org">Service Status</a></li>
-					</ul>
-					<h3 class="section-title sr-only">Other</h3>
-					<ul class="list-inline social-media">
+			<div class="col-md-12">
+				<!-- footer copyright -->
+				<div class="footer-copyright">
+					<div>
+						<span class="hidden-print"><a
+							href="https://www.eclipse.org/"><img
+								src="http://projects.eclipse.org/sites/all/themes/solstice/public/images/logo/eclipse-logo-bw-800x188.png"
+								alt="Eclipse.org black and white logo" width="166" height="39"
+								class="logo-eclipse-white"></a></span>
+						<p id="copyright-text">
+							Copyright © 2017. All Rights Reserved. Designed by <a
+								href="https://colorlib.com" target="_blank">Colorlib</a>
+						</p>
+					</div>
+				</div>
+				<!-- /footer copyright -->
+
+			</div>
+		</div>
+		<!-- /Container -->
+
+	</footer>
+	<!-- /Footer -->
+
+	<!-- Back to top -->
+	<div id="back-to-top"></div>
+	<!-- /Back to top -->
+
+	<!-- Preloader -->
+	<div id="preloader">
+		<div class="preloader">
+			<span></span> <span></span> <span></span> <span></span>
+		</div>
+	</div>
+	<!-- /Preloader -->
+
+	<!-- jQuery Plugins -->
+	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+
+</body>
+
+</html>l class="list-inline social-media">
 						<li class="link_twitter first"><a
 							href="https://twitter.com/EclipseFdn"><i
 								class="fa fa-twitter-square"></i></a></li>
