webContent: Use https link for the eclipse logo
Signed-off-by: Jean-Christian Kouame <jean-christian.kouame@ericsson.com>
Change-Id: I517135669711aec89ec6b48b9fd94c61a2b66642

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 					<div>
 						<span class="hidden-print"><a
 							href="https://www.eclipse.org/"><img
-								src="http://projects.eclipse.org/sites/all/themes/solstice/public/images/logo/eclipse-logo-bw-800x188.png"
+								src="https://projects.eclipse.org/sites/all/themes/solstice/public/images/logo/eclipse-logo-bw-800x188.png"
 								alt="Eclipse.org black and white logo" width="166" height="39"
 								class="logo-eclipse-white"></a></span>
 						<p id="copyright-text">
