--- a/download.html
+++ b/download.html
@@ -9,6 +9,8 @@
 
 <title>Trace Compass</title>
 
+<link rel="shortcut icon" href="/img/tc_icon.png">
+
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	
