--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 <title>Trace Compass</title>
-<link rel="icon" href="favicon.ico">
+<link rel="shortcut icon" href="favicon.ico">
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script
