Doc: Add documentation on incubator features
Signed-off-by: Geneviève Bastien <gbastien+lttng@versatic.net>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.18/ua-parser.min.js"></script>
-	
+
 <!-- Google font -->
 <link
 	href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round"
@@ -234,6 +234,7 @@
 							<li>Correlation of hardware and software components
 								execution traces</li>
 							<li>Symbol name resolution using debug information</li>
+							<li>Additional analyses available with the Trace Compass Incubator</li>
 							<li>and more!</li>
 						</ul>
 					</div>
@@ -283,6 +284,16 @@
 							<li>Custom text or XML parsers that can be added right from
 								the graphical interface by the user</li>
 							<li>Can be extended to support various log or trace files.</li>
+							<li>Provided by the TraceCompass Incubator:
+
+								<ul>
+									<li>Linux <a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.ftrace.doc.user/User-Guide.html">FTrace</a> raw textual format
+									</li>
+									<li>Google's <a href="https://docs.google.com/document/d/1CvAClvFfyA5R-PhYUmn5OOQtYMH4h6I0nSsKchNAySU/preview#!">trace event</a> json format</li>
+									<li>Additional <a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.perf.profiling.doc.user/User-Guide.html">Linux Perf2ctf</a> traces features</li>
+									<li><a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.atrace.doc.user/User-Guide.html">Android traces</a></li>
+									<li><a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.uftrace.doc.user/User-Guide.html">UFtrace format</a></li>
+								</ul></li>
 						</ul>
 						<p>
 							For more information, see the <a
@@ -560,6 +571,18 @@
 							<li><a
 								href="http://archive.eclipse.org/tracecompass/doc/stable/org.eclipse.tracecompass.gdbtrace.doc.user/User-Guide.html">GDB
 									Tracepoint Analysis User Guide</a></li>
+							<li>User Guides from the <a
+								href="http://archive.eclipse.org/tracecompass/doc/stable/org.eclipse.tracecompass.doc.user/Trace-Compass-Incubator.html#Trace_Compass_Incubator">
+							    Trace Compass Incubator</a>:
+									<ul>
+										<li><a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.ftrace.doc.user/User-Guide.html">FTrace User Guide</a></li>
+										<li><a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.atrace.doc.user/User-Guide.html">Android Trace User Guide</a></li>
+										<li><a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.uftrace.doc.user/User-Guide.html">UFTrace User Guide</a></li>
+										<li><a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.perf.profiling.doc.user/User-Guide.html">Perf Profiling User Guide</a></li>
+										<li><a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.callstack.doc.user/User-Guide.html">Generic Callstack Analysis User Guide</a></li>
+										<li><a href="http://archive.eclipse.org/tracecompass.incubator/doc/org.eclipse.tracecompass.incubator.virtual.machine.analysis.doc.user/User-Guide.html">Virtual Machine Analysis User Guide</a></li>
+									</ul>
+							</li>
 						</ul>
 
 						<p>
